--- a/dashboard/dashboards.yaml
+++ b/dashboard/dashboards.yaml
@@ -15,15 +15,10 @@
 apiVersion: 1
 
 providers:
-  - name: Four Keys - Node.js Backend - actual + mocked data
+  - name: Four Keys
     type: file
     updateIntervalSeconds: 100
     allowUiUpdates: true
     options:
-      path: /etc/grafana/dashboards/fourkeys_dashboard.json
-  - name: Four Keys - Node.js Backend - actual
-    type: file
-    updateIntervalSeconds: 100
-    allowUiUpdates: true
-    options:
-      path: /etc/grafana/dashboards/fourkeys_dashboard_actual.json
+      path: /etc/grafana/dashboards
+      foldersFromFilesStructure: true
